// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarDropdown Render correctly all dropdowns 1`] = `
<Fragment>
  <Text
    className="ff3k5ad"
    component="h5"
  >
    graph_filter_interval_duration
  </Text>
  <Select
    aria-label="graph_filter_interval_duration"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy="graph_filter_interval_duration"
    className="fhxf3qu"
    createText="Create"
    direction="down"
    id="graph_filter_interval_duration"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={false}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="Last 1m"
    selections={60}
    toggleIcon={null}
    toggleId={null}
    variant="single"
    width=""
  >
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={true}
      key="60"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="60"
    >
      Last 1m
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="300"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="300"
    >
      Last 5m
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="600"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="600"
    >
      Last 10m
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="1800"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="1800"
    >
      Last 30m
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="3600"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="3600"
    >
      Last 1h
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="10800"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="10800"
    >
      Last 3h
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="21600"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="21600"
    >
      Last 6h
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`ToolbarDropdown Render correctly all dropdowns 2`] = `
<Fragment>
  <Text
    className="ff3k5ad"
    component="h5"
  >
    metrics_filter_poll_interval
  </Text>
  <Select
    aria-label="metrics_filter_poll_interval"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy="metrics_filter_poll_interval"
    className="fhxf3qu"
    createText="Create"
    direction="down"
    id="metrics_filter_poll_interval"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={false}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="Every 15s"
    selections={15000}
    toggleIcon={null}
    toggleId={null}
    variant="single"
    width=""
  >
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="0"
    >
      Pause
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="10000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="10000"
    >
      Every 10s
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={true}
      key="15000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="15000"
    >
      Every 15s
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="30000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="30000"
    >
      Every 30s
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="60000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="60000"
    >
      Every 1m
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="300000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="300000"
    >
      Every 5m
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="900000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="900000"
    >
      Every 15m
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`ToolbarDropdown Render correctly all dropdowns 3`] = `
<Fragment>
  <Text
    className="ff3k5ad"
    component="h5"
  >
    graph_filter_layouts
  </Text>
  <Select
    aria-label="graph_filter_layouts"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy="graph_filter_layouts"
    className="fhxf3qu"
    createText="Create"
    direction="down"
    id="graph_filter_layouts"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={false}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="Cola"
    selections="cola"
    toggleIcon={null}
    toggleId={null}
    variant="single"
    width=""
  >
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={true}
      key="cola"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="cola"
    >
      Cola
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="cose-bilkent"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="cose-bilkent"
    >
      Cose
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="dagre"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="dagre"
    >
      Dagre
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`ToolbarDropdown Render dropdowns correctly with controlled values and labels 1`] = `
<Fragment>
  <Text
    className="ff3k5ad"
    component="h5"
  >
    graph_filter_interval_duration
  </Text>
  <Select
    aria-label="graph_filter_interval_duration"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy="graph_filter_interval_duration"
    className="fhxf3qu"
    createText="Create"
    direction="down"
    id="graph_filter_interval_duration"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={false}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="Last 1m"
    selections={60}
    toggleIcon={null}
    toggleId={null}
    variant="single"
    width=""
  >
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={true}
      key="60"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="60"
    >
      Last 1m
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="300"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="300"
    >
      Last 5m
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="600"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="600"
    >
      Last 10m
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="1800"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="1800"
    >
      Last 30m
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="3600"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="3600"
    >
      Last 1h
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="10800"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="10800"
    >
      Last 3h
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="21600"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="21600"
    >
      Last 6h
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`ToolbarDropdown Render dropdowns correctly with controlled values and labels 2`] = `
<Fragment>
  <Text
    className="ff3k5ad"
    component="h5"
  >
    metrics_filter_poll_interval
  </Text>
  <Select
    aria-label="metrics_filter_poll_interval"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy="metrics_filter_poll_interval"
    className="fhxf3qu"
    createText="Create"
    direction="down"
    id="metrics_filter_poll_interval"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={false}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="Every 15s"
    selections={15000}
    toggleIcon={null}
    toggleId={null}
    variant="single"
    width=""
  >
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="0"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="0"
    >
      Pause
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="10000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="10000"
    >
      Every 10s
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={true}
      key="15000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="15000"
    >
      Every 15s
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="30000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="30000"
    >
      Every 30s
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="60000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="60000"
    >
      Every 1m
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="300000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="300000"
    >
      Every 5m
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="900000"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="900000"
    >
      Every 15m
    </SelectOption>
  </Select>
</Fragment>
`;

exports[`ToolbarDropdown Render dropdowns correctly with controlled values and labels 3`] = `
<Fragment>
  <Text
    className="ff3k5ad"
    component="h5"
  >
    graph_filter_layouts
  </Text>
  <Select
    aria-label="graph_filter_layouts"
    ariaLabelClear="Clear all"
    ariaLabelRemove="Remove"
    ariaLabelToggle="Options menu"
    ariaLabelTypeAhead=""
    ariaLabelledBy="graph_filter_layouts"
    className="fhxf3qu"
    createText="Create"
    direction="down"
    id="graph_filter_layouts"
    isCreatable={false}
    isDisabled={false}
    isExpanded={false}
    isGrouped={false}
    isPlain={false}
    maxHeight=""
    noResultsFoundText="No results found"
    onClear={[Function]}
    onCreateOption={[Function]}
    onSelect={[Function]}
    onToggle={[Function]}
    placeholderText="Cola"
    selections="cola"
    toggleIcon={null}
    toggleId={null}
    variant="single"
    width=""
  >
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={true}
      key="cola"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="cola"
    >
      Cola
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="cose-bilkent"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="cose-bilkent"
    >
      Cose
    </SelectOption>
    <SelectOption
      className=""
      index={0}
      isChecked={false}
      isDisabled={false}
      isFocused={false}
      isPlaceholder={false}
      isSelected={false}
      key="dagre"
      keyHandler={[Function]}
      onClick={[Function]}
      sendRef={[Function]}
      value="dagre"
    >
      Dagre
    </SelectOption>
  </Select>
</Fragment>
`;
